--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,8 @@
 
 <body>
 <header>
+
+<div id="container">
 	<div id="header1">
 		<h1>Anthony J Abbatiello</h1>
 	</div>
@@ -53,6 +55,7 @@
 		</div>
 	</aside>
 </section>
+<div id="container">
 
 
 <footer>
