Most updated HW2

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
 	</div>
 </header>
 
+<div class="container">
 <section>
 	<h2> Contact </h2>
 		<h4>Name</h4>
@@ -48,6 +49,7 @@
 		</div>
 	</aside>
 </section>
+</div>
 
 
 
