--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <header>
+
 	<div id="header1">
 		<h1>Anthony J Abbatiello</h1>
 	</div>
@@ -19,6 +20,7 @@
 	</div>
 </header>
 
+<div class=container>
 <section>
 	<h2> About Me </h2>
 		<img src="https://avatars3.githubusercontent.com/u/24378504?v=3&u=3d8c1e4c6a8da00a270d97f34069b10635d02872&s=400" align =left height="200">
@@ -38,6 +40,7 @@
 		</a>
 	</div>
 </aside>
+</div>
 
 
 
