--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
 		<img src="https://scontent-ord1-1.xx.fbcdn.net/v/t1.0-9/2465_1052504586386_891345_n.jpg?oh=3f5d69004d78e0387c315f5b16a19b39&oe=5960E8E4" align =left height="200">
 		</div>
 	
-</section>
+	</section>
 	
 
 <aside>
@@ -55,7 +55,8 @@
 		</div>
 	</aside>
 </section>
-<div id="container">
+</div>
+
 
 
 <footer>
